--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.65.0",
+    "recharts": "^2.12.7",
     "rrule": "^2.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
