--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
-    "next": "latest",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-aria-components": "^1.13.0",
     "react-calendar": "^6.0.0",
     "react-day-picker": "^9.11.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.65.0",
     "recharts": "^2.12.7",
     "rrule": "^2.8.1",
@@ -60,7 +60,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
