--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "^1.0.6",
+    "@react-email/render": "^2.0.4",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-query": "^5.90.20",
@@ -52,6 +54,7 @@
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.65.0",
     "recharts": "^2.12.7",
+    "resend": "^6.9.1",
     "rrule": "^2.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
@@ -66,6 +69,7 @@
     "eslint": "^9",
     "eslint-config-next": "^16.1.1",
     "postcss": "^8",
+    "supabase": "^2.75.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
